// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse components Body should match snapshot 1`] = `
.c0 {
  width: 100%;
  -webkit-transition: all 0.25s ease;
  transition: all 0.25s ease;
  overflow: hidden;
}

<div
  className="c0"
/>
`;

exports[`Collapse components Detail should match snapshot 1`] = `
.c0 {
  font-size: 10px;
}

<div
  className="c0"
/>
`;

exports[`Collapse components Header should match snapshot 1`] = `
.c0 {
  cursor: pointer;
  width: 100%;
  min-height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: calc(var(--SPACING_BASE) * 1 * 1px) 0;
}

<div
  className="c0"
/>
`;

exports[`Collapse components Opener should match snapshot 1`] = `
.c0 {
  margin-right: calc(var(--SPACING_BASE) * 0.75 * 1px);
}

.c0:focus,
.c0:active,
.c0:focus:active {
  outline: none;
  border-radius: 90000px;
  box-shadow: 0 0 0 2px rgba(0,180,43,0.5);
}

<div
  className="c0"
/>
`;

exports[`Collapse components Title should match snapshot 1`] = `
.c0 {
  margin-right: auto;
}

<div
  className="c0"
/>
`;

exports[`Collapse components Wrapper should match snapshot 1`] = `
.c0 {
  width: 100%;
  -webkit-transition: all 0.25s ease;
  transition: all 0.25s ease;
  min-height: 48px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  border-top: 1px solid hsla(0,0%,0%,8%);
}

<section
  className="c0"
/>
`;
